--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,9 @@ a {
 	text-align: center;
 }
 
-.reason-item-blue {
+
+.reason-item-blue-1-text,
+.reason-item-blue-2-text {
 	background-color: #81b3d2;
 	color: #ffffff;
 	font-size: 14px;
@@ -77,7 +79,8 @@ a {
 	text-align: center;
 }
 
-.reason-item-blue h3 {
+.reason-item-blue-1-text,
+.reason-item-blue-2-text h3 {
 	font-size: 21px;
 	line-height: 21px;
 	font-weight: bold;
@@ -90,6 +93,7 @@ a {
 	line-height: 21px;	
 	text-align: center;
 }
+
 
 .reason-item-white h3 {
 	font-size: 21px;
@@ -357,5 +361,224 @@ button:focus {
 	color: #928a85;
 }
 
+/*конец каталог */
+
 /*фотография+маска - как фон, текст как контентное изображение. перевырезать с белой маской.
 */
+
+
+/*сеточные стили*/
+html,
+body {
+	width: 1200px;
+ }
+	
+
+.main-header {
+	/*margin-bottom нужен здесь? или получается, что прилигает вплотную? как наезжат логотип на фоновое изображение?*/
+}
+
+.main-navigation {
+	display: flex;
+	width: 100%;
+	outline: solid 1px green;
+	justify-content: space-between;
+
+}
+
+.site-navigation-1 {
+	margin-top: 0px;
+	padding: 0px;
+	margin-left: 73px;
+	display: flex;	
+	outline: solid 1px red;
+	list-style: none;
+	order: -1;
+	justify-content: space-between;
+	width: 339px;
+	height: 56px
+}
+
+
+.main-navigation-logo {
+	display: flex;
+	width: 144px;
+ 	height: 73px;
+ 	list-style: none;
+ }
+
+.site-navigation-2 {
+	margin-top: 0px;
+	padding: 0px;
+	display: flex;
+	margin-right: 73px;
+	display: flex;	
+	outline: solid 1px red;
+	list-style: none;
+	width: 330px;
+	height: 56px;
+	justify-content: space-between;
+}
+
+.background-image {
+	width: 100%;
+	margin-bottom: 60px;
+}
+
+/*.container h1 {
+	display: flex;
+	justify-content: center;
+
+}
+
+нужно ли для текста "СЕДОНА — НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!
+ПРИЧИНЫ ПОЕХАТЬ В СЕДОНУ
+РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН!" отдельная часть сетки?
+
+*/
+
+
+.reasons-list {
+	padding: 0px;
+	margin: 0px;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.reason-item-blue-1 {
+	display: flex;
+	width: 1200px;
+	height: 260px;
+	outline: solid 3px green;
+}
+
+
+.reason-item-blue-1-text {
+	display: flex;
+	width: 400px;
+	height: 260px;
+	outline: solid 3px yellow;
+	flex-direction: column;
+	order: -1;
+}
+
+
+.reason-item-blue-1-img {
+	display: flex;
+	width: 800px
+	height: 260px;
+	outline: solid 3px red; 
+	flex-wrap: nowrap;
+}
+
+
+/*почему на <p> в .reason-item-blue-1-text перестали действовать общие правила текста, заданные в body html?*/
+
+
+.reason-item-white {
+	margin: 0px;
+	padding: 0px;
+	display: flex;
+	width: 400px; 
+	height: 330px;
+	flex-direction: column;
+	outline: solid 3px blue; 
+}
+
+
+.reason-item-blue-2 {
+	display: flex;
+	width: 1200px;
+	height: 260px;
+	outline: solid 3px green;
+}
+
+
+.reason-item-blue-2-text {
+	display: flex;
+	width: 400px;
+	height: 260px;
+	outline: solid 3px yellow;
+	flex-direction: column;
+}
+
+
+
+.reason-item-blue-2-img {
+	display: flex;
+	width: 800px
+	height: 260px;
+	outline: solid 3px red; 
+	flex-wrap: nowrap;
+	order: -1;
+}
+
+.reason-item-grey {
+	margin: 0px;
+	padding: 0px;
+	display: flex;
+	width: 400px; 
+	height: 255px;
+	flex-direction: column;
+	outline: solid 3px blue; 
+}
+
+
+.interest {
+	display: block;
+	width: 1200px;
+	height: 290px;
+	outline: solid 3px red;
+}
+
+.form {
+	display: flex;
+	width: 570px;
+	height: 480px;
+	flex-direction: column;
+	margin-left: 314px;
+	outline: solid 3px green;
+}
+
+.button-search {
+	display: block;
+	height: 87px;
+}
+
+.form-fields {
+	display: flex;
+	height: 393px;
+	flex-direction: column;
+}
+
+.main-footer {
+	padding: 0px;
+	display: flex;
+	width: 100%;
+	outline: solid 3px green;
+	height: 120px;
+} 
+
+.footer-text {
+	margin-left: 132px;
+	margin-top: 50px;
+	width: 135px;
+	margin-right: 255px;
+	outline: solid 3px yellow;
+}
+
+.social-button {
+	list-style: none;
+	width: 150px;
+	margin-top: 50px;
+	outline: solid 3px pink;
+}
+
+.footer-copyright {
+	width: 196px;
+	margin-top: 50px;
+	margin-left: 227px; 
+	/*почему не срабатывает правый маржин?*/
+	outline: solid 3px blue;
+}
+
