--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ a {
 	text-align: center;
 }
 
-.reason-item-blue-1-text,
+.reason-item-blue-1-text h3,
 .reason-item-blue-2-text h3 {
 	font-size: 21px;
 	line-height: 21px;
@@ -368,74 +368,60 @@ button:focus {
 
 
 /*сеточные стили*/
-html,
-body {
+.container {
 	width: 1200px;
+	margin-left: auto;
+	margin-right: auto;
  }
 	
 
-.main-header {
-	/*margin-bottom нужен здесь? или получается, что прилигает вплотную? как наезжат логотип на фоновое изображение?*/
-}
-
 .main-navigation {
+	margin: 0px;
+	padding: 0px;
 	display: flex;
-	width: 100%;
-	outline: solid 1px green;
-	justify-content: space-between;
-
+	height: 73px;
+	outline: solid 3px green;
+	/*flex-grow: 1;*/
+	flex-direction: column;
 }
 
-.site-navigation-1 {
-	margin-top: 0px;
-	padding: 0px;
-	margin-left: 73px;
+.site-navigation li {
 	display: flex;	
-	outline: solid 1px red;
+	width: 400px
+	padding: 0px;
+	margin: 0px;
 	list-style: none;
-	order: -1;
-	justify-content: space-between;
-	width: 339px;
-	height: 56px
+	outline: solid 3px red;
 }
 
 
 .main-navigation-logo {
-	display: flex;
+	display: block;
 	width: 144px;
  	height: 73px;
  	list-style: none;
+ 	position: absolute;
+ 	left: 50%;
+ 	transform: 50%;
  }
+ 	
+ 
 
-.site-navigation-2 {
-	margin-top: 0px;
-	padding: 0px;
-	display: flex;
-	margin-right: 73px;
-	display: flex;	
-	outline: solid 1px red;
-	list-style: none;
-	width: 330px;
-	height: 56px;
-	justify-content: space-between;
-}
-
+ 
 .background-image {
 	width: 100%;
 	margin-bottom: 60px;
 }
 
-/*.container h1 {
-	display: flex;
-	justify-content: center;
 
-}
 
-нужно ли для текста "СЕДОНА — НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!
+
+
+/*нужно ли для текста "СЕДОНА — НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!
 ПРИЧИНЫ ПОЕХАТЬ В СЕДОНУ
 РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН!" отдельная часть сетки?
 
-*/
+*/*/
 
 
 .reasons-list {
@@ -447,7 +433,6 @@ body {
 
 .reason-item-blue-1 {
 	display: flex;
-	width: 1200px;
 	height: 260px;
 	outline: solid 3px green;
 }
@@ -472,7 +457,6 @@ body {
 }
 
 
-/*почему на <p> в .reason-item-blue-1-text перестали действовать общие правила текста, заданные в body html?*/
 
 
 .reason-item-white {
@@ -512,6 +496,10 @@ body {
 	flex-wrap: nowrap;
 	order: -1;
 }
+
+/*убрать item-blue-1-2, сделать модификатор для порядка расположения блоков во втором*/
+
+
 
 .reason-item-grey {
 	margin: 0px;
@@ -560,25 +548,27 @@ body {
 } 
 
 .footer-text {
-	margin-left: 132px;
+
+	/*margin-left: 132px;*/
 	margin-top: 50px;
-	width: 135px;
-	margin-right: 255px;
+	width: 400px;
+	/*margin-right: 255px;*/
 	outline: solid 3px yellow;
 }
 
-.social-button {
+.footer-social {
 	list-style: none;
-	width: 150px;
+	width: 400px;
 	margin-top: 50px;
 	outline: solid 3px pink;
 }
 
 .footer-copyright {
-	width: 196px;
+	width: 400px;
 	margin-top: 50px;
-	margin-left: 227px; 
+	/*margin-right: 100px; */
 	/*почему не срабатывает правый маржин?*/
 	outline: solid 3px blue;
 }
 
+/*блоки в футеры одинаковой ширины и выровнять их по центру*/
